test/chainsaw/authpolicy/output_claims_to_headers/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: application
spec:
  image: mendhak/http-https-echo
  port: 8080
  replicas: 1
  ingresses:
    - foo.bar
  env:
    - name: "HTTP_PORT"
      value: "8080"
  accessPolicy:
    outbound:
      rules:
        - application: mock-oauth2
          namespace: auth
