test/chainsaw/authpolicy/output_claims_to_headers/authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  outputClaimToHeaders:
    - claim: sub
      header: x-token-sub
    - claim: role
      header: x-token-role
    - claim: aud
      header: x-token-aud
    - claim: doesntexist
      header: x-not-in-token-but-in-output-claims
  allowedAudiences:
    - value: maskinporten_client
    - value: maskinporten_server
  wellKnownURI: http://mock-oauth2.auth:8080/maskinporten/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
