test/chainsaw/authpolicy/output_claims_to_headers/echo-application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: application
spec:
  image: mendhak/http-https-echo:latest
  port: 5678
  replicas: 1
  ingresses:
    - foo.bar
  env:
    - name: HTTP_PORT
      value: "5678"
  accessPolicy:
    outbound:
      rules:
        - application: mock-oauth2
          namespace: auth
