test/chainsaw/authpolicy/output_claims_to_headers/authpolicy-assert.yaml
# RequestAuthentication
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy
spec:
  jwtRules:
    - audiences:
        - maskinporten_client
        - maskinporten_server
      forwardOriginalToken: true
      issuer: http://mock-oauth2.auth:8080/maskinporten
      jwksUri: http://mock-oauth2.auth:8080/maskinporten/jwks
      outputClaimToHeaders:
        - claim: sub
          header: x-token-sub
        - claim: role
          header: x-token-role
        - claim: aud
          header: x-token-aud
  selector:
    matchLabels:
      app: application
---
# AuthorizationPolicy (require-auth)
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-require-auth
spec:
  rules:
    - to:
        - operation:
            paths:
              - '*'
      when:
        - key: request.auth.claims[iss]
          values:
            - http://mock-oauth2.auth:8080/maskinporten
        - key: request.auth.claims[aud]
          values:
            - maskinporten_client
            - maskinporten_server
  selector:
    matchLabels:
      app: application
---
