test/chainsaw/authpolicy/output_claims_to_headers/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: output-claims-to-headers
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
  steps:
    - try:
        - create:
            file: authpolicy.yaml
        - create:
            file: echo-application.yaml
        - apply:
            file: ../../../resources/ingress/wildcard-ingress.yaml
        - assert:
            file: echo-application-assert.yaml
        - script:
            content: |
              hurl --error-format long \
              --insecure --test tests.hurl \
              --variable token="$(../../../../venv/bin/python ./../../../../scripts/get-mock-oauth2-token.py --issuer maskinporten --code maskinporten_code --token_name access_token)"
